--- a/es/LC_MESSAGES/vk-music-bot.po
+++ b/es/LC_MESSAGES/vk-music-bot.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-06-01 16:38+0300\n"
-"PO-Revision-Date: 2019-06-01 16:48+0300\n"
+"PO-Revision-Date: 2019-06-01 18:24+0200\n"
 "Last-Translator: Gerardo Balboa <@Gerardo>\n"
 "Language-Team: Spanish\n"
 "Language: es_ES\n"
@@ -16,15 +16,15 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.2.3\n"
 
 #: handlers/audio.py:118
 msgid "Please wait, your audio is coming..."
-msgstr ""
+msgstr "Espera, tu audio se está descargando…"
 
 #: handlers/audio.py:134
 msgid "Song is removed by copyright owners"
-msgstr ""
+msgstr "La canción ha sido eliminada por los propietarios del copyright"
 
 #: handlers/docdb.py:64
 msgid "Got it! Note: it may take time for the song to appear in the search"
@@ -35,72 +35,82 @@ msgstr ""
 #: handlers/donation.py:43 handlers/donation.py:113 handlers/settings.py:52
 #: handlers/settings.py:72
 msgid "Close"
-msgstr ""
+msgstr "Cerrar"
 
 #: handlers/donation.py:46
 msgid "Support us"
-msgstr ""
+msgstr "Apóyanos"
 
 #: handlers/donation.py:48
 msgid ""
 "Your donations help us to develop new features, increase stability and pay "
 "for our servers."
 msgstr ""
+"Tus donaciones nos ayudan a desarrollar nuevas características, aumentar la "
+"estabilidad y costear nuestros servidores."
 
 #: handlers/donation.py:51 handlers/donation.py:131
 msgid ""
 "For just one donation we will gift your account with a *lifetime* premium "
 "status. There is a short list of premium features you will receive:"
 msgstr ""
+"Con una donación te regalaremos un estado premium *de por vida*. Esta es una "
+"pequeña lista de características premium que recibirás:"
 
 #: handlers/donation.py:54 handlers/donation.py:134
 msgid "No more ads and spam to you, *forever*"
-msgstr ""
+msgstr "No más anuncios ni spam para ti, *para siempre*"
 
 #: handlers/donation.py:55 handlers/donation.py:135
 msgid "An option to disable advertising inline captions"
-msgstr ""
+msgstr "Opción para deshabilitar publicidad en búsquedas inline"
 
 #: handlers/donation.py:56 handlers/donation.py:136
 msgid "An option to display audio format info"
-msgstr ""
+msgstr "Opción para mostrar info del formato de audio"
 
 #: handlers/donation.py:57 handlers/donation.py:137
 msgid "An option to change search results size"
-msgstr ""
+msgstr "Opción para cambiar el tamaño de los resultados"
 
 #: handlers/donation.py:58 handlers/donation.py:138
 msgid "More options under /settings command"
-msgstr ""
+msgstr "Más opciones en el comando /settings"
 
 #: handlers/donation.py:60
 #, python-format
 msgid ""
 "Subscribe to our news channel to be notified of new features: %(channel)s"
 msgstr ""
+"Suscríbete a nuestro canal de noticias para ser avisado de nuevas "
+"características: %(channel)s"
 
 #: handlers/donation.py:118
 msgid "You are a premium user!"
-msgstr ""
+msgstr "¡Eres usuario premium!"
 
 #: handlers/donation.py:120
 msgid ""
 "You're a good person who kindly supports us, so we granted you a *lifetime* "
 "premium status, enjoy it"
 msgstr ""
+"Has sido una buena persona que nos ha apoyado, por eso te hemos otorgado un "
+"estado premium *de por vida*, ¡disfrútalo!"
 
 #: handlers/donation.py:124
 msgid "There is a short list of premium features you have:"
-msgstr ""
+msgstr "Esta es una lista de características premium que tienes:"
 
 #: handlers/donation.py:126
 msgid "You are not premium, yet"
-msgstr ""
+msgstr "Todavía no eres premium"
 
 #: handlers/donation.py:128
 msgid ""
 "Use /donate command to support us and get your *lifetime* premium status"
 msgstr ""
+"Usa el comando /donate para apoyarnos y obtener un estado premium *de por "
+"vida*"
 
 #: handlers/favorites.py:34
 msgid "Added to your playlist (/my)"
@@ -112,51 +122,51 @@ msgstr "Eliminada de tu lista de reproducción"
 
 #: handlers/help.py:16
 msgid "🔥 Commands"
-msgstr ""
+msgstr "🔥 Comandos"
 
 #: handlers/help.py:17 handlers/start.py:37
 msgid ""
 "Just send me an artist and/or a song name and I will find music for you!"
-msgstr ""
+msgstr "¡Envíame un artista o título de canción y encontraré música para ti!"
 
 #: handlers/help.py:18 handlers/start.py:38
 msgid "/song — search by song title"
-msgstr ""
+msgstr "/song — buscar por título de canción"
 
 #: handlers/help.py:19 handlers/start.py:39
 msgid "/artist — search for artist name"
-msgstr ""
+msgstr "/artist — buscar por nombre de artista"
 
 #: handlers/help.py:20
 #| msgid "Removed from your playlist"
 msgid "/my — list your playlist"
-msgstr ""
+msgstr "/my — mostrar tu playlist"
 
 #: handlers/help.py:21
 msgid "/top — popular songs"
-msgstr ""
+msgstr "/top — canciones populares"
 
 #: handlers/help.py:22 handlers/start.py:41
 msgid "/settings — change settings"
-msgstr ""
+msgstr "/settings — cambiar ajustes"
 
 #: handlers/help.py:23
 msgid "/donate — support authors"
-msgstr ""
+msgstr "/donate — apoyar autores"
 
 #: handlers/help.py:24
 msgid "/premium — premium info"
-msgstr ""
+msgstr "/premium — información premium"
 
 #: handlers/help.py:26
 #, python-format
 msgid "Official news channel: %(channel)s"
-msgstr ""
+msgstr "Canal oficial de noticias: %(channel)s"
 
 #: handlers/help.py:27
 #, python-format
 msgid "Contact information: %(contact)s"
-msgstr ""
+msgstr "Información de contacto: %(contact)s"
 
 #: handlers/search.py:117 handlers/search.py:172
 msgid "I found nothing"
@@ -208,21 +218,21 @@ msgstr "Botones de me gusta (heart): %s"
 #: handlers/settings.py:43
 #, python-format
 msgid "Inline mode captions: %s"
-msgstr ""
+msgstr "Búsquedas inline: %s"
 
 #: handlers/settings.py:46
 #, python-format
 msgid "Show audio format: %s"
-msgstr ""
+msgstr "Mostrar formato de audio: %s"
 
 #: handlers/settings.py:49
 #, python-format
 msgid "Search results: %d"
-msgstr ""
+msgstr "Resultados búsqueda: %d"
 
 #: handlers/settings.py:54
 msgid "What would you like to change?"
-msgstr "¿Qué quieres cambiar?"
+msgstr "¿Qué te gustaría cambiar?"
 
 #: handlers/settings.py:74
 msgid "Please, select new language"
@@ -231,6 +241,8 @@ msgstr "Por favor, elige un idioma"
 #: handlers/settings.py:83
 msgid "Please help us with a donation (/donate) to access this feature"
 msgstr ""
+"Por favor apóyanos con una donación (/donate) para utilizar esta "
+"característica"
 
 #: handlers/settings.py:141
 msgid "Language settings updated"
@@ -238,13 +250,15 @@ msgstr "👌🇪🇸 Ajustes de idioma actualizados"
 
 #: handlers/start.py:40
 msgid "/setlang — change language"
-msgstr ""
+msgstr "/setlang — cambiar idioma"
 
 #: handlers/unknowncommand.py:27
 #, python-format
 msgid ""
 "Unknown command: %(command)s. Call /help for a list of available commands."
 msgstr ""
+"Comando desconocido: %(command)s. Utiliza /help para ver una lista de "
+"comandos."
 
 #~ msgid "Empty file size, skipping"
 #~ msgstr "Tamaño del archivo vacío, saltando"
