--- a/it/LC_MESSAGES/vk-music-bot.po
+++ b/it/LC_MESSAGES/vk-music-bot.po
@@ -3,19 +3,19 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-06-01 16:38+0300\n"
-"PO-Revision-Date: 2019-06-01 16:50+0300\n"
-"Last-Translator: ShadowK98, BlueFrog11\n"
+"PO-Revision-Date: 2019-06-01 18:31+0200\n"
+"Last-Translator: Xx_Crazyminer_xX\n"
 "Language-Team: English\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.2.3\n"
 
 #: handlers/audio.py:118
 msgid "Please wait, your audio is coming..."
-msgstr ""
+msgstr "Attendi, il tuo audio sta arrivando..."
 
 #: handlers/audio.py:134
 msgid "Song is removed by copyright owners"
@@ -24,131 +24,143 @@ msgstr "⛔️ La canzone è stata rimossa dai proprietari del copyright"
 #: handlers/docdb.py:64
 msgid "Got it! Note: it may take time for the song to appear in the search"
 msgstr ""
+"Ricevuto! Nota: potrebbe volerci un pò di tempo prima che la canzone spunti "
+"nell'elenco"
 
 #: handlers/donation.py:43 handlers/donation.py:113 handlers/settings.py:52
 #: handlers/settings.py:72
 msgid "Close"
-msgstr ""
+msgstr "Chiudi"
 
 #: handlers/donation.py:46
 msgid "Support us"
-msgstr ""
+msgstr "Supportaci"
 
 #: handlers/donation.py:48
 msgid ""
 "Your donations help us to develop new features, increase stability and pay "
 "for our servers."
 msgstr ""
+"Le tue donazioni ci aiutano a sviluppare nuove funzionalità, aumentare la "
+"stabilità e pagare i server."
 
 #: handlers/donation.py:51 handlers/donation.py:131
 msgid ""
 "For just one donation we will gift your account with a *lifetime* premium "
 "status. There is a short list of premium features you will receive:"
 msgstr ""
+"Per una sola donazione ti regaleremo un account premium *per sempre*. Ecco "
+"un breve elenco di funzionalità premium che riceverai:"
 
 #: handlers/donation.py:54 handlers/donation.py:134
 msgid "No more ads and spam to you, *forever*"
-msgstr ""
+msgstr "Niente più annunci e spam *per sempre*"
 
 #: handlers/donation.py:55 handlers/donation.py:135
 msgid "An option to disable advertising inline captions"
-msgstr ""
+msgstr "Un'opzione per disabilitare le pubblicità nelle didascalie"
 
 #: handlers/donation.py:56 handlers/donation.py:136
 msgid "An option to display audio format info"
-msgstr ""
+msgstr "Un'opzione per visualizzare le informazioni sul formato audio"
 
 #: handlers/donation.py:57 handlers/donation.py:137
 msgid "An option to change search results size"
-msgstr ""
+msgstr "Un'opzione per cambiare la quantità di risultati"
 
 #: handlers/donation.py:58 handlers/donation.py:138
 msgid "More options under /settings command"
-msgstr ""
+msgstr "Più opzioni facendo /settings"
 
 #: handlers/donation.py:60
 #, python-format
 msgid ""
 "Subscribe to our news channel to be notified of new features: %(channel)s"
 msgstr ""
+"Iscriviti al nostro canale delle news per essere notificato all'uscita di "
+"nuove funzionalità: %(channel)s"
 
 #: handlers/donation.py:118
 msgid "You are a premium user!"
-msgstr ""
+msgstr "Sei un utente premium!"
 
 #: handlers/donation.py:120
 msgid ""
 "You're a good person who kindly supports us, so we granted you a *lifetime* "
 "premium status, enjoy it"
 msgstr ""
+"Sei una brava persona che ci sostiene gentilmente, quindi ti abbiamo "
+"concesso un'account premium *per sempre*, divertiti"
 
 #: handlers/donation.py:124
 msgid "There is a short list of premium features you have:"
-msgstr ""
+msgstr "Questo è un breve elenco di funzioni premium che hai:"
 
 #: handlers/donation.py:126
 msgid "You are not premium, yet"
-msgstr ""
+msgstr "Non sei ancora premium"
 
 #: handlers/donation.py:128
 msgid ""
 "Use /donate command to support us and get your *lifetime* premium status"
 msgstr ""
+"Utilizza il comando /donate per supportarci e per diventare *per sempre* "
+"premium"
 
 #: handlers/favorites.py:34
 msgid "Added to your playlist (/my)"
-msgstr ""
+msgstr "Aggiunto alla tua playlist(/my)"
 
 #: handlers/favorites.py:47
 msgid "Removed from your playlist"
-msgstr ""
+msgstr "Rimosso dalla tua playlist"
 
 #: handlers/help.py:16
 msgid "🔥 Commands"
-msgstr ""
+msgstr "🔥 Comandi"
 
 #: handlers/help.py:17 handlers/start.py:37
 msgid ""
 "Just send me an artist and/or a song name and I will find music for you!"
-msgstr ""
+msgstr "Mandami un artista e/o un nome di canzone e troverò la musica per te!"
 
 #: handlers/help.py:18 handlers/start.py:38
 msgid "/song — search by song title"
-msgstr ""
+msgstr "/song — Cerca una canzone per titolo"
 
 #: handlers/help.py:19 handlers/start.py:39
 msgid "/artist — search for artist name"
-msgstr ""
+msgstr "/artist — Cerca una canzone per il nome dell'artista"
 
 #: handlers/help.py:20
 msgid "/my — list your playlist"
-msgstr ""
+msgstr "/my — Mostra la tua playlist"
 
 #: handlers/help.py:21
 msgid "/top — popular songs"
-msgstr ""
+msgstr "/top — Mostra le canzoni popolari"
 
 #: handlers/help.py:22 handlers/start.py:41
 msgid "/settings — change settings"
-msgstr ""
+msgstr "/settings — Cambia le impostazioni"
 
 #: handlers/help.py:23
 msgid "/donate — support authors"
-msgstr ""
+msgstr "/donate — Supporta gli autori"
 
 #: handlers/help.py:24
 msgid "/premium — premium info"
-msgstr ""
+msgstr "/premium — Informazioni sul premium"
 
 #: handlers/help.py:26
 #, python-format
 msgid "Official news channel: %(channel)s"
-msgstr ""
+msgstr "Canale ufficiale delle news: %(channel)s"
 
 #: handlers/help.py:27
 #, python-format
 msgid "Contact information: %(contact)s"
-msgstr ""
+msgstr "Informazioni di contatto: %(contact)s"
 
 #: handlers/search.py:117 handlers/search.py:172
 msgid "I found nothing"
@@ -157,15 +169,15 @@ msgstr "Non ho trovato niente 😔"
 #: handlers/search.py:135
 #, python-format
 msgid "Results %(first)d-%(last)d of %(total)d\n"
-msgstr ""
+msgstr "Mostrati %(first)d-%(last)d di %(total)d\n"
 
 #: handlers/search.py:213
 msgid "What song are you looking for?"
-msgstr ""
+msgstr "Che canzone stai cercando ?"
 
 #: handlers/search.py:224
 msgid "What artist are you looking for?"
-msgstr ""
+msgstr "Che artista stai cercando ?"
 
 #: handlers/search.py:280 handlers/search.py:303
 msgid "You need to search for something before"
@@ -173,56 +185,56 @@ msgstr "Devi cercare qualcosa prima 🐸"
 
 #: handlers/search.py:308
 msgid "You're at the first page already"
-msgstr ""
+msgstr "Sei già alla prima pagina"
 
 #: handlers/settings.py:31
 msgid "Enabled"
-msgstr ""
+msgstr "Abilitato"
 
 #: handlers/settings.py:32
 msgid "Disabled"
-msgstr ""
+msgstr "Disabilitato"
 
 #: handlers/settings.py:35
 msgid "Language"
-msgstr ""
+msgstr "Lingua"
 
 #: handlers/settings.py:37
 #, python-format
 msgid "Bitrate preview: %s"
-msgstr ""
+msgstr "Mostra il bitrate: %s"
 
 #: handlers/settings.py:40
 #, python-format
 msgid "Like (heart) buttons: %s"
-msgstr ""
+msgstr "Bottone dei like(cuore): %s"
 
 #: handlers/settings.py:43
 #, python-format
 msgid "Inline mode captions: %s"
-msgstr ""
+msgstr "Didascalia nella modalità inline: %s"
 
 #: handlers/settings.py:46
 #, python-format
 msgid "Show audio format: %s"
-msgstr ""
+msgstr "Mostra il formato audio: %s"
 
 #: handlers/settings.py:49
 #, python-format
 msgid "Search results: %d"
-msgstr ""
+msgstr "Risultati di ricerca: %d"
 
 #: handlers/settings.py:54
 msgid "What would you like to change?"
-msgstr ""
+msgstr "Cosa ti piacerebbe cambiare?"
 
 #: handlers/settings.py:74
 msgid "Please, select new language"
-msgstr ""
+msgstr "Per favore, seleziona la nuova lingua"
 
 #: handlers/settings.py:83
 msgid "Please help us with a donation (/donate) to access this feature"
-msgstr ""
+msgstr "Aiutaci con una donazione(/donate) per accedere a questa funzione"
 
 #: handlers/settings.py:141
 msgid "Language settings updated"
@@ -230,13 +242,15 @@ msgstr "👌🇮🇹 Impostazioni della lingua aggiornate"
 
 #: handlers/start.py:40
 msgid "/setlang — change language"
-msgstr ""
+msgstr "/setlang — Cambia la lingua"
 
 #: handlers/unknowncommand.py:27
 #, python-format
 msgid ""
 "Unknown command: %(command)s. Call /help for a list of available commands."
 msgstr ""
+"Comando sconosciuto: %(command)s. Esegui /help per vedere la lista dei "
+"comandi disponibili."
 
 #~ msgid ""
 #~ "What artist are you looking for? For example «Lera Lynn» or «Wiz Khalifa»"
@@ -253,32 +267,32 @@ msgstr ""
 #~ msgstr ""
 #~ "Scrivi il nome dell'artista e/o della canzone e troverò la musica che "
 #~ "cerchi!\n"
-#~ "/song — cerca per canzone\n"
-#~ "/artist — cerca per artista"
+#~ "/song — cerca per canzone\n"
+#~ "/artist — cerca per artista"
 
 #~ msgid "help_cmd_reply"
 #~ msgstr ""
 #~ "🔥 Comandi\n"
 #~ "Mandami semplicemente il nome di un artista e/o di una canzone e troverò "
 #~ "la musica che cerchi per te!\n"
-#~ "/song — cerca per canzone (utile per chat di gruppo)\n"
-#~ "/artist — cerca per artista\n"
-#~ "/my — accedi ai tuoi audio VK\n"
-#~ "/friends — accedi ai tuoi amici VK\n"
-#~ "/groups — accedi ai tuoi gruppi VK\n"
-#~ "/add — aggiungi l'ultima canzone scaricata ai tuoi audio VK\n"
+#~ "/song — cerca per canzone (utile per chat di gruppo)\n"
+#~ "/artist — cerca per artista\n"
+#~ "/my — accedi ai tuoi audio VK\n"
+#~ "/friends — accedi ai tuoi amici VK\n"
+#~ "/groups — accedi ai tuoi gruppi VK\n"
+#~ "/add — aggiungi l'ultima canzone scaricata ai tuoi audio VK\n"
 #~ "\n"
 #~ "☝️ Per accedere alle opzioni personalizzate di vk.com devi autorizzarmi "
 #~ "per accedere a VK tramite /start command\n"
 #~ "\n"
 #~ "📖 Testi\n"
-#~ "/lyrics /text /l — ottieni il testo dell'ultima canzone scaricata\n"
-#~ "/lyrics /text /l [1-%(max_songs)d] — ottieni il testo della canzone "
+#~ "/lyrics /text /l — ottieni il testo dell'ultima canzone scaricata\n"
+#~ "/lyrics /text /l [1-%(max_songs)d] — ottieni il testo della canzone "
 #~ "scekta dalla lista di ricerca (le canzoni con il testo sono marcate con "
 #~ "📖)\n"
 #~ "\n"
 #~ "🌎 Lingue\n"
-#~ "/setlang — cambia lingua\n"
+#~ "/setlang — cambia lingua\n"
 #~ "\n"
 #~ "Canale ufficiale per le notizie: @vkmusic_bot_news\n"
 #~ "Informazioni di contatto: @vkmowner\n"
