--- a/fa/LC_MESSAGES/vk-music-bot.po
+++ b/fa/LC_MESSAGES/vk-music-bot.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-06-01 16:38+0300\n"
-"PO-Revision-Date: 2019-06-01 16:49+0300\n"
+"PO-Revision-Date: 2019-06-01 21:06+0430\n"
 "Last-Translator: Amirhosseinhpv <support@intel-software.ir>\n"
 "Language-Team: \n"
 "Language: fa\n"
@@ -16,11 +16,11 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.2.3\n"
 
 #: handlers/audio.py:118
 msgid "Please wait, your audio is coming..."
-msgstr ""
+msgstr "لطفا صبر کنید، فایل صوتی شما در راه است ..."
 
 #: handlers/audio.py:134
 msgid "Song is removed by copyright owners"
@@ -28,132 +28,124 @@ msgstr "⛔️ آهنگ توسط صاحبان کپی رایت حذف شده اس
 
 #: handlers/docdb.py:64
 msgid "Got it! Note: it may take time for the song to appear in the search"
-msgstr ""
+msgstr "گرفتم! نکته: ممکن است نمایش آهنگ در نتایج جستجو کمی طول بکشد"
 
-#: handlers/donation.py:43 handlers/donation.py:113 handlers/settings.py:52
-#: handlers/settings.py:72
+#: handlers/donation.py:43 handlers/donation.py:113 handlers/settings.py:52 handlers/settings.py:72
 msgid "Close"
-msgstr ""
+msgstr "بستن"
 
 #: handlers/donation.py:46
 msgid "Support us"
-msgstr ""
+msgstr "از ما حمایت کنید"
 
 #: handlers/donation.py:48
-msgid ""
-"Your donations help us to develop new features, increase stability and pay "
-"for our servers."
-msgstr ""
+msgid "Your donations help us to develop new features, increase stability and pay for our servers."
+msgstr "کمک های مالی شما به ما کمک می کند ویژگی های جدیدتری اضافه کرده و پایداری برنامه را افزایش داده و هزینه ی سرورها را بپردازیم."
 
 #: handlers/donation.py:51 handlers/donation.py:131
 msgid ""
-"For just one donation we will gift your account with a *lifetime* premium "
-"status. There is a short list of premium features you will receive:"
-msgstr ""
+"For just one donation we will gift your account with a *lifetime* premium status. There is a short list of premium features you "
+"will receive:"
+msgstr "با تنها یک بار کمک، شما برای همیشه کاربر ویژه خواهید شد. این لیست کوتاهی است از ویژگی های اضافه ای که دریافت خواهید کرد:"
 
 #: handlers/donation.py:54 handlers/donation.py:134
 msgid "No more ads and spam to you, *forever*"
-msgstr ""
+msgstr "دیگر هرگز برای شما تبلیغات و اسپم نمی آید"
 
 #: handlers/donation.py:55 handlers/donation.py:135
 msgid "An option to disable advertising inline captions"
-msgstr ""
+msgstr "دارای گزینه خاموش کردن کپشن های تبلیغاتی هستید"
 
 #: handlers/donation.py:56 handlers/donation.py:136
 msgid "An option to display audio format info"
-msgstr ""
+msgstr "دارای گزینه نمایش اطلاعات بیشتر درباره فرمت فایل صوتی هستید"
 
 #: handlers/donation.py:57 handlers/donation.py:137
 msgid "An option to change search results size"
-msgstr ""
+msgstr "دارای گزینه تغییر سایز نتایج جستجو هستید"
 
 #: handlers/donation.py:58 handlers/donation.py:138
 msgid "More options under /settings command"
-msgstr ""
+msgstr "گزینه های دیگری در دستور /settings برای شما نمایش داده می شود"
 
 #: handlers/donation.py:60
 #, python-format
-msgid ""
-"Subscribe to our news channel to be notified of new features: %(channel)s"
-msgstr ""
+msgid "Subscribe to our news channel to be notified of new features: %(channel)s"
+msgstr "عضو کانال اخبار ما شوید تا از ویژگی های جدید مطلع شوید: %(channel)s"
 
 #: handlers/donation.py:118
 msgid "You are a premium user!"
-msgstr ""
+msgstr "شما یک کاربر ویژه هستید!"
 
 #: handlers/donation.py:120
-msgid ""
-"You're a good person who kindly supports us, so we granted you a *lifetime* "
-"premium status, enjoy it"
-msgstr ""
+msgid "You're a good person who kindly supports us, so we granted you a *lifetime* premium status, enjoy it"
+msgstr "شما با مهربانی از ما حمایت کردید، پس ما به عنوان دائمی کاربر ویژه را اهدا می کنیم"
 
 #: handlers/donation.py:124
 msgid "There is a short list of premium features you have:"
-msgstr ""
+msgstr "این لیست کوتاهی است از ویژگی های خاصی که به آن ها دسترسی دارید:"
 
 #: handlers/donation.py:126
 msgid "You are not premium, yet"
-msgstr ""
+msgstr "شما هنوز کاربر ویژه نیستید"
 
 #: handlers/donation.py:128
-msgid ""
-"Use /donate command to support us and get your *lifetime* premium status"
-msgstr ""
+msgid "Use /donate command to support us and get your *lifetime* premium status"
+msgstr "برای حمایت از ما، از دستور /donate استفاده کنید تا برای همیشه تبدیل به کاربر ویژه شوید"
 
 #: handlers/favorites.py:34
 msgid "Added to your playlist (/my)"
-msgstr ""
+msgstr "به پلی لیست شما اضافه شد (/my)"
 
 #: handlers/favorites.py:47
 msgid "Removed from your playlist"
-msgstr ""
+msgstr "از پلی لیست حذف شد"
 
 #: handlers/help.py:16
 msgid "🔥 Commands"
-msgstr ""
+msgstr "دستورات"
 
 #: handlers/help.py:17 handlers/start.py:37
-msgid ""
-"Just send me an artist and/or a song name and I will find music for you!"
-msgstr ""
+msgid "Just send me an artist and/or a song name and I will find music for you!"
+msgstr "نام هنرمند و/یا نام آهنگ را برای من ارسال کن، من آن را برایت پیدا می کنم!"
 
 #: handlers/help.py:18 handlers/start.py:38
 msgid "/song — search by song title"
-msgstr ""
+msgstr "/song - جستجو بر اساس نام آهنگ"
 
 #: handlers/help.py:19 handlers/start.py:39
 msgid "/artist — search for artist name"
-msgstr ""
+msgstr "/artist - جستجو بر اساس نام هنرمند"
 
 #: handlers/help.py:20
 msgid "/my — list your playlist"
-msgstr ""
+msgstr "/my - نمایش پلی لیست شما"
 
 #: handlers/help.py:21
 msgid "/top — popular songs"
-msgstr ""
+msgstr "/top - آهنگ های محبوب"
 
 #: handlers/help.py:22 handlers/start.py:41
 msgid "/settings — change settings"
-msgstr ""
+msgstr "/settings - تغییر تنظیمات"
 
 #: handlers/help.py:23
 msgid "/donate — support authors"
-msgstr ""
+msgstr "/donate - حمایت از سازندگان"
 
 #: handlers/help.py:24
 msgid "/premium — premium info"
-msgstr ""
+msgstr "/premium - اطلاعات ویژه"
 
 #: handlers/help.py:26
 #, python-format
 msgid "Official news channel: %(channel)s"
-msgstr ""
+msgstr "کانال رسمی اخبار: %(channel)s"
 
 #: handlers/help.py:27
 #, python-format
 msgid "Contact information: %(contact)s"
-msgstr ""
+msgstr "اطلاعات تماس : %(contact)s"
 
 #: handlers/search.py:117 handlers/search.py:172
 msgid "I found nothing"
@@ -162,15 +154,15 @@ msgstr "چیزی پیدا نشد 😔"
 #: handlers/search.py:135
 #, python-format
 msgid "Results %(first)d-%(last)d of %(total)d\n"
-msgstr ""
+msgstr "نتایج %(first)d-%(last)d از %(total)d\n"
 
 #: handlers/search.py:213
 msgid "What song are you looking for?"
-msgstr ""
+msgstr "به دنبال چه آهنگی هستید؟"
 
 #: handlers/search.py:224
 msgid "What artist are you looking for?"
-msgstr ""
+msgstr "به دنبال کدام هنرمند هستید؟"
 
 #: handlers/search.py:280 handlers/search.py:303
 msgid "You need to search for something before"
@@ -178,7 +170,7 @@ msgstr "شما باید اول جستجویی انجام دهید 🐸"
 
 #: handlers/search.py:308
 msgid "You're at the first page already"
-msgstr ""
+msgstr "شما در صفحه اول هستید"
 
 #: handlers/settings.py:31
 msgid "Enabled"
@@ -200,22 +192,22 @@ msgstr "نمایش بیت ریت : %s"
 #: handlers/settings.py:40
 #, python-format
 msgid "Like (heart) buttons: %s"
-msgstr ""
+msgstr "دکمه های لایک (haert) : %s"
 
 #: handlers/settings.py:43
 #, python-format
 msgid "Inline mode captions: %s"
-msgstr ""
+msgstr "حالت اینلاین برای کپشن ها: %s"
 
 #: handlers/settings.py:46
 #, python-format
 msgid "Show audio format: %s"
-msgstr ""
+msgstr "نمایش فرمت فایل صوتی: %s"
 
 #: handlers/settings.py:49
 #, python-format
 msgid "Search results: %d"
-msgstr ""
+msgstr "نتایج جستجو: %d"
 
 #: handlers/settings.py:54
 msgid "What would you like to change?"
@@ -227,7 +219,7 @@ msgstr "لطفا زبان جدید را انتخاب نمایید"
 
 #: handlers/settings.py:83
 msgid "Please help us with a donation (/donate) to access this feature"
-msgstr ""
+msgstr "لطفا برای دسترسی به این ویژگی، از ما حمایت کنید (/donate)"
 
 #: handlers/settings.py:141
 msgid "Language settings updated"
@@ -235,13 +227,12 @@ msgstr "👌🇮🇷 تنظیمات زبان به روزرسانی شد"
 
 #: handlers/start.py:40
 msgid "/setlang — change language"
-msgstr ""
+msgstr "/setland - تغییر زبان"
 
 #: handlers/unknowncommand.py:27
 #, python-format
-msgid ""
-"Unknown command: %(command)s. Call /help for a list of available commands."
-msgstr ""
+msgid "Unknown command: %(command)s. Call /help for a list of available commands."
+msgstr "دستور ناشناخته: %(command)s. برای مشاهده لیستی از دستورات موجود از /help استفاده کنید."
 
 #~ msgid ""
 #~ "Thanks! Now you can use personalized commands.\n"
@@ -250,28 +241,21 @@ msgstr ""
 #~ "با تشکر! شما میتوانید از دستورات شخصی سازی شده استفاده کنید.\n"
 #~ "مثلا برای دسترسی به صدا های خود در VK از دستور /my استفاده کنید"
 
-#~ msgid ""
-#~ "What artist are you looking for? For example «Lera Lynn» or «Wiz Khalifa»"
-#~ msgstr ""
-#~ "به دنبال چه خواننده ای هستید ؟ برای مثال «Pitbull» یا «Selena Gomez»"
+#~ msgid "What artist are you looking for? For example «Lera Lynn» or «Wiz Khalifa»"
+#~ msgstr "به دنبال چه خواننده ای هستید ؟ برای مثال «Pitbull» یا «Selena Gomez»"
 
-#~ msgid ""
-#~ "What song are you looking for? For example «Get Lucky» or «Take Me To "
-#~ "Church»"
-#~ msgstr ""
-#~ "به دنبال چه آهنگی هستید ؟ برای مثال «Hands To Myself» یا «Bad Blood»"
+#~ msgid "What song are you looking for? For example «Get Lucky» or «Take Me To Church»"
+#~ msgstr "به دنبال چه آهنگی هستید ؟ برای مثال «Hands To Myself» یا «Bad Blood»"
 
 #~ msgid "intro_msg"
 #~ msgstr ""
-#~ "سلام ! نام خواننده و/یا اهنگ را به من بدهید تا ترانه را برای شما پیدا "
-#~ "کنم!\n"
+#~ "سلام ! نام خواننده و/یا اهنگ را به من بدهید تا ترانه را برای شما پیدا کنم!\n"
 #~ "‏/song —.جستجو با نام آهنگ\n"
 #~ "‏/artist — جستجو با نام خواننده\n"
 #~ "‏/setlang — انتخاب زبان\n"
 #~ "‏/settings — تغییر تنظیمات"
 
-#~ msgid ""
-#~ "This command can not be used in a group chat, send it as a private message"
+#~ msgid "This command can not be used in a group chat, send it as a private message"
 #~ msgstr "این دستور را نمیتوان در گروه استفاده کرد ، در چت خصوصی امتحان کنید"
 
 #~ msgid "help_cmd_reply"
@@ -285,8 +269,7 @@ msgstr ""
 #~ "‏/groups — دسترسی به گروهایتان در VK\n"
 #~ "‏/add — افزودن آخرین ترانه دانلودی به آهنگهایتان در VK\n"
 #~ "‏\n"
-#~ "☝ برای دستیابی به قابلیت های ربات باید با vk.com از طریق /start وارد "
-#~ "شوید\n"
+#~ "☝ برای دستیابی به قابلیت های ربات باید با vk.com از طریق /start وارد شوید\n"
 #~ "‏\n"
 #~ "📖 متن ترانه\n"
 #~ "‏/lyrics /text /l — متن ترانه اخرین آهنگ دانلودی\n"
@@ -306,21 +289,14 @@ msgstr ""
 #~ msgid "Remind later"
 #~ msgstr "بعدا یادآور شو"
 
-#~ msgid ""
-#~ "Please rate us 5 stars in the bot-store: https://telegram.me/storebot?"
-#~ "start=vkmusic_bot"
-#~ msgstr ""
-#~ "به ما ⭐️⭐️⭐️⭐️⭐ در استوربوت بدهید : https://telegram.me/storebot?"
-#~ "start=vkmusic_bot"
+#~ msgid "Please rate us 5 stars in the bot-store: https://telegram.me/storebot?start=vkmusic_bot"
+#~ msgstr "به ما ⭐️⭐️⭐️⭐️⭐ در استوربوت بدهید : https://telegram.me/storebot?start=vkmusic_bot"
 
 #~ msgid "Ok, we won't bother you for a while"
 #~ msgstr "خب ، برای مدتی مزاحم شما نمی شویم"
 
-#~ msgid ""
-#~ "If you like this bot there are a few ways you can support the developer!"
-#~ msgstr ""
-#~ "اگر از این ربات خوشتان آمده است ، راه هایی برای حمایت از توسعه دهنده وجود "
-#~ "دارد!"
+#~ msgid "If you like this bot there are a few ways you can support the developer!"
+#~ msgstr "اگر از این ربات خوشتان آمده است ، راه هایی برای حمایت از توسعه دهنده وجود دارد!"
 
 #~ msgid "To select new language, use the following commands"
 #~ msgstr "برای انتخاب زبان جدید ، از دستورات زیر استفاده کنید"
